# TaiLerDownloader

./: .gitignore  Cargo.toml  ChangeLog  Cross.toml  LICENSE.md  README.md  build-all-android.bat  build-all-harmonyos.bat  build-all-harmonyos.sh  优化.md  重大变更说明.md
.cargo/: config-harmonyos.toml  config-linux.toml  config-macos-ios.toml  config-macos.toml  config.toml
.github/workflows/: build_and_test.yml
cmake/: aarch64-linux-gnu.cmake
cross/: Dockerfile.aarch64
scripts/: test_comprehensive.py  test_progress_events.py  test_server.py  test_tld.py  tester.py  tld_interface.py
src/core/: adaptive_concurrency.rs  android_export.rs  buffer_pool.rs  downloader.rs  downloader_interface.rs  ed2k_downloader.rs  export.rs  file_utils.rs  ftp_downloader.rs  get_downloader.rs  http3_downloader.rs  http_downloader.rs  license_output.rs  logging.rs  metalink_downloader.rs  metrics.rs  mod.rs  performance_monitor.rs  progress_tracker.rs  send_message.rs  sftp_downloader.rs  socket_client.rs  torrent_downloader.rs  websocket_client.rs
