[package]
name = "TaiLerDownloader"
authors = ["TT23XR Studio", "Sxxyrry", "Wangziqi0"]
version = "0.1.0-dev.6"
edition = "2024"
license = "GNU Affero General Public License v3.0"

[lints.rust]
non_snake_case = "allow"

[lib]
name = "TaiLerDownloader"
crate-type = ["cdylib", "lib"]

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "time", "fs", "sync", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
num_cpus = "1.16"
tokio-util = { version = "0.7", default-features = false, features = ["slab"] }
futures = { version = "0.3.32", default-features = false, features = ["async-await", "executor"] }
once_cell = "1.21.4"
crossbeam = "0.8"
url = { version = "2", default-features = false }
lazy_static = "1.5.0"
bytes = { version = "1", default-features = false }
http = { version = "1", default-features = false }

[dependencies.suppaftp]
version = "8.0"
default-features = false
features = ["tokio"]
optional = true

[dependencies.russh]
version = "0.60.0"
default-features = false
features = ["ring", "rsa"]
optional = true

[dependencies.russh-sftp]
version = "2.0"
default-features = false
optional = true

[dependencies.librqbit]
version = "8.1"
default-features = false
features = ["rust-tls"]
optional = true

[dependencies.metalink]
version = "0.1"
optional = true

[dependencies.h3]
version = "0.0.8"
optional = true

[dependencies.h3-quinn]
version = "0.0.10"
optional = true

[dependencies.quinn]
version = "0.11"
default-features = false
features = ["rustls"]
optional = true

[dependencies.rustls]
version = "0.23.37"
default-features = false
features = ["ring"]
optional = true

[dependencies.webpki-roots]
version = "1.0.6"
optional = true

[dependencies.tokio-tungstenite]
version = "0.29.0"
default-features = false
features = ["rustls-tls-native-roots", "connect"]
optional = true

[dependencies.jni]
version = "0.22.3"
optional = true

[features]
default = ["full"]

full = ["ftp", "sftp", "torrent", "metalink", "ed2k", "http3", "websocket", "socket"]

ftp = ["dep:suppaftp"]
sftp = ["dep:russh", "dep:russh-sftp"]
torrent = ["dep:librqbit"]
metalink = ["dep:metalink"]
ed2k = []
http3 = ["dep:h3", "dep:h3-quinn", "dep:quinn", "dep:rustls", "dep:webpki-roots"]
websocket = ["dep:tokio-tungstenite"]
socket = ["dep:tokio-tungstenite"]

android = ["dep:jni"]

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = "z"
